# Speaker_Diarization_beta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/core/: __init__.py  dependencies.py
app/libs/: __init__.py  gpu_monitor.py  gpu_reporter.py
app/routers/: diarization.py  gpu_test.py
app/schemas/: diarization.py
app/services/: diarization_service.py
