[tool.poetry]
name = "fastapi-diarization"
version = "0.1.0"
description = "Audio diarization service using FastAPI, Whisper, and Pyannote"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"

# Core dependencies from original project - GPU accelerated versions
torch = "==2.3.1"  # Exact version to match pre-installed PyTorch
torchvision = "==0.18.1"  # Use compatible version available for cu121
torchaudio = "==2.3.1"  # Use compatible version available for cu121
# torchtext not needed for diarization functionality
numpy = "==1.26.4"
requests = "^2.31.0"
"pyannote.audio" = ">=3.3.1"
faster-whisper = "==1.1.1"
ctranslate2 = "==4.5.0"
tenacity = "^8.2.3"
pandas = "^2.1.0"

# Additional dependencies for FastAPI
ffmpeg-python = "^0.2.0"
python-magic = {extras = ["file-magic"], version = "^0.4.27"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_reexport = true
